added search function to data-management

--- a/src/app/articles/articles.component.html
+++ b/src/app/articles/articles.component.html
@@ -13,7 +13,7 @@
 
         <tr class="first-row">
             <th>Item #</th>
-            <th>Item Desc</th>
+            <th>Description</th>
             <th>Price</th>
             <th class="hide-on-mobile">Category</th>
             <th class="hide-on-mobile">Supplier</th>
