--- a/src/app/dialog-add-customer/dialog-add-customer.component.html
+++ b/src/app/dialog-add-customer/dialog-add-customer.component.html
@@ -5,7 +5,7 @@
 <h1 mat-dialog-title>Add Customer</h1>
 <div mat-dialog-content>
     <div class="container-input-names">
-        <mat-form-field class="input-c-number" appearance="outline">
+        <mat-form-field [ngClass]="{'color-red': !customerNumberUnique}" class="input-c-number" appearance="outline">
             <mat-label>Customer number</mat-label>
             <input (keyup)="checkValidation()" [ngClass]="{'color-red': !customerNumberUnique}" required id="firstName"
                 name="firstName" class="form-control" minlength="5" #name="ngModel" [disabled]="loading"
@@ -80,9 +80,9 @@
 
         <mat-form-field class="input-infotext" appearance="outline">
             <mat-label>Infotext</mat-label>
-            <textarea matInput [(ngModel)]="customer.infotext" cdkTextareaAutosize #autosize="cdkTextareaAutosize" cdkAutosizeMinRows="1"
-                cdkAutosizeMaxRows="5" maxlength="1000"></textarea>
-                <mat-hint>Optional / max 100 characters</mat-hint>
+            <textarea matInput [(ngModel)]="customer.infotext" cdkTextareaAutosize #autosize="cdkTextareaAutosize"
+                cdkAutosizeMinRows="1" cdkAutosizeMaxRows="5" maxlength="1000"></textarea>
+            <mat-hint>Optional / max 1000 characters</mat-hint>
         </mat-form-field>
 
     </div>
@@ -96,8 +96,7 @@
 
 </div>
 <div mat-dialog-actions>
-    <button [disabled]="loading" mat-flat-button color="warn" (click)="onNoClick()"
-        [mat-dialog-close]="">Cancel</button>
+    <button [disabled]="loading" mat-flat-button color="warn" [mat-dialog-close]="">Cancel</button>
     <button [disabled]="loading || formIncomplete" mat-flat-button color="primary" type="submit"
         (click)="saveCustomer()" [mat-dialog-close]="">Save</button>
 </div>
