--- a/src/app/dialog-add-customer/dialog-add-customer.component.scss
+++ b/src/app/dialog-add-customer/dialog-add-customer.component.scss
@@ -1,3 +1,16 @@
+.color-red {
+    color: red;
+
+    input {
+        color: red;
+    }
+
+    mat-label {
+        color: red;
+    }
+}
+
+
 .container-progress-bar {
     padding: 0;
 }
@@ -75,8 +88,37 @@
 
 .input-status {
     width: 40%;
+    height: fit-content;
 }
 
 .input-infotext {
     width: 60%;
+}
+
+@media (max-width: 550px) {
+
+    .container-input-names,
+    .container-input-email-phone,
+    .container-input-address-city,
+    .container-input-status-infotext {
+        flex-direction: column;
+        gap: 0;
+    }
+
+    .input-c-number,
+    .input-c-name,
+    .input-zip,
+    .input-city,
+    .input-status,
+    .input-infotext {
+        width: unset;
+    }
+
+    .container-input-names {
+        margin-bottom: 0;
+    }
+
+    .input-c-number {
+        margin-bottom: 24px;
+    }
 }
